# myna

./: .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  RELEASE.md  SECURITY.md  STATUS.md  install.sh
.github/workflows/: ci.yml  release.yml
daemon/: pyproject.toml
daemon/myna/: app.py  config.py  extract.py  lang_detect.py  player.py  registry.py  v2_registry.py  v2_types.py  voice_wardrobe.py
daemon/myna/karaoke/: __init__.py  socket.py  timing.py
daemon/tests/: test_cc_hook.py  test_extract.py  test_karaoke_socket.py  test_karaoke_synth_integration.py  test_karaoke_timing.py  test_lang_detect.py  test_player.py  test_registry.py  test_v2_extract.py  test_v2_lang_detect.py  test_v2_model_status.py  test_v2_registry.py  test_v2_status.py  test_v2_synthesize.py  test_v2_voice_wardrobe.py  test_voice_wardrobe.py  v2_helpers.py
docs/: api-contracts-daemon.md  architecture-daemon.md  architecture-macos.md  architecture-ops.md  architecture-site.md  component-inventory-macos.md  component-inventory-site.md  contribution-guide.md  data-models-daemon.md  deployment-guide.md  development-guide-daemon.md  development-guide-macos.md  development-guide-ops.md  development-guide-site.md  index.md  integration-architecture.md  project-overview.md  project-parts.json  project-scan-report.json  risks-and-premortem.md  source-tree-analysis.md
hammerspoon/: myna.lua
hooks/: myna-cc-announce.py
karaoke/: .gitignore  .swiftlint.yml  Package.swift  README.md  build.sh
launchagents/: dev.myna.daemon.plist.template  dev.myna.engine.plist.template
tap/: README.md
(+119 files in other folders)
