[project]
name = "myna"
version = "0.2.0"
description = "Always-on local TTS companion"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "trafilatura",
    # langid is a small (~2 MB) deterministic language detector used by
    # myna.lang_detect to annotate /v2/synthesize responses with
    # X-Myna-Detected-Lang headers. Importable name is `langid`. The
    # detection module gracefully no-ops if langid isn't importable, so
    # the daemon still runs in environments that don't have it, but we
    # ship it as a default dep so the feature works out of the box for
    # users who brew-install the daemon.
    "langid",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["myna*"]
